@@ -210,7 +210,7 @@ def test_webtrekk_has_session_parameter(testserver, testbrowser):
 
 
 @pytest.mark.xfail(reason='tracking scripts & pixels may timeout')
-def test_ivw_tracking_for_mobile_and_desktop(
+def test_ivw_tracking_for_mobile_and_desktop_and_wrapper(
         selenium_driver, testserver, monkeypatch):
 
     def tpm(me):
@@ -220,11 +220,19 @@ def test_ivw_tracking_for_mobile_and_desktop(
         zeit.web.core.view.Base, 'enable_third_party_modules', tpm)
 
     driver = selenium_driver
+
     # ipad landscape
     driver.set_window_size(1024, 768)
     driver.get('%s/artikel/03' % testserver.url)
     content = driver.execute_script("return iam_data.st")
     assert content == "zeitonl"
+
+    # Wrapper-Apps must always be the »MEW-Angebotskennung« mobzeit
+    # we simulate this via the get-param 'appcontent' instead of user-agent
+    driver.get('%s/artikel/02?app-content=true' % testserver.url)
+    content = driver.execute_script("return iam_data.st")
+    assert content == "mobzeit"
+
     # ipad portrait and smaller
     driver.set_window_size(766, 1024)
     driver.get('%s/artikel/01' % testserver.url)
